# huggingsound

./: .env.sample  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: publish.yml  test.yml
examples/speech_recognition/: evaluation.py  evaluation_custom_decoder.py  finetune.py  inference.py  inference_flashlight_decoder.py  inference_kensho_decoder.py  inference_parlance_decoder.py
huggingsound/: __init__.py  listener.py  metrics.py  normalizer.py  token_set.py  trainer.py  utils.py
huggingsound/recognition/: __init__.py  decoder.py  model.py  normalizer.py  token_set.py
huggingsound/speech_recognition/: decoder.py  model.py
tests/: conftest.py  test_huggingsound.py
