[tool.poetry]
name = "HuggingSound"
version = "0.1.6"
description = "HuggingSound: A toolkit for speech-related tasks based on HuggingFace's tools."
authors = ["Jonatas Grosman <jonatasgrosman@gmail.com>"]
maintainers = ["Jonatas Grosman <jonatasgrosman@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jonatasgrosman/huggingsound"
repository = "https://github.com/jonatasgrosman/huggingsound"
documentation = "https://github.com/jonatasgrosman/huggingsound"
keywords = ["transformers", "audio", "speech", "automatic speech recognition", "asr", "voice recognition", "speech recognition", "speech-to-text"]

[tool.poetry.urls]
issues = "https://github.com/jonatasgrosman/huggingsound/issues"

[tool.poetry.dependencies]
python = ">=3.7,<4"
torch = ">=1.7,!=1.12.0,<1.13.0"
transformers = "^4.23.1"
datasets = "^2.6.1"
librosa = "^0.9.2"
jiwer = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"
pytest-randomly = "^3.4.1"
coverage = {version = "^5.2.1", extras = ["toml"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
junit_family = "xunit2"
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

[tool.coverage.run]
source = ['.']
omit = [
    "huggingsound/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]
